--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,10 +5,12 @@ on:
     branches:
       - develop
       - release/*
+      - main
   pull_request:
     branches:
       - develop
       - release/*
+      - main
 
 jobs:
   build-and-test:
