--- a/workflows/ci.yml
+++ b/workflows/ci.yml
@@ -26,9 +26,12 @@ jobs:
 
       - name: Checkstyle Шалгах
         run: mvn checkstyle:check
+        working-directory: lab-15/calculator
 
       - name: JUnit Тест ба JaCoCo Coverage Шалгах
         run: mvn test jacoco:check
+        working-directory: lab-15/calculator
 
       - name: JaCoCo Тайлан Үүсгэх
         run: mvn jacoco:report
+        working-directory: lab-15/calculator
