--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,12 +26,12 @@ jobs:
 
       - name: Checkstyle Шалгах
         run: mvn checkstyle:check
-        working-directory: /calculator
+        working-directory: calculator
 
       - name: JUnit Тест ба JaCoCo Coverage Шалгах
         run: mvn test jacoco:check
-        working-directory: /calculator
+        working-directory: calculator
 
       - name: JaCoCo Тайлан Үүсгэх
         run: mvn jacoco:report
-        working-directory: /calculator
+        working-directory: calculator
